fine tune JVM options