@@ -28,13 +28,12 @@ def jpackageCommand = ['jpackage',
                        '--app-version', "${project.version}",
                        '--java-options']
 
-def javaOptions = """-Xmx128m -Xms128m -XX:+UseSerialGC
+def javaOptions = """-Xmx128m -Xms128m
                -Djdk.attach.allowAttachSelf=true
                --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                --add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED
                --add-opens=java.desktop/javax.swing=ALL-UNNAMED
-               --add-opens=java.desktop/javax.swing.border=ALL-UNNAMED 
-               --add-opens=java.desktop/com.apple.laf=ALL-UNNAMED
+               --add-opens=java.desktop/javax.swing.border=ALL-UNNAMED
                --add-opens=java.desktop/javax.swing.colorchooser=ALL-UNNAMED
                -XX:ErrorFile=\$USER_HOME/java_error_in_idea_%p.log
                -XX:HeapDumpPath=\$USER_HOME/java_error_in_idea.hprof"""
@@ -43,7 +42,7 @@ task packageMacApp(type: Exec) {
     workingDir './'
 
     commandLine(jpackageCommand +
-            [javaOptions +' -Dsun.java2d.metal=true',
+            [javaOptions +' -Dsun.java2d.metal=true --add-opens=java.desktop/com.apple.laf=ALL-UNNAMED',
              '--icon', 'package/samurai.icns',
              '--type', 'dmg',
 //            '--mac-app-store',
@@ -103,7 +102,7 @@ task packageWinApp(type: Exec) {
 task packageDeb(type: Exec) {
     workingDir './'
     commandLine(jpackageCommand +
-            [javaOptions,
+            [javaOptions + ' --add-exports=java.desktop/sun.awt.X11=ALL-UNNAMED',
              '--license-file', './LICENSE.txt',
              '--linux-rpm-license-type', 'ASL 2.0',
              '--type', 'deb',
@@ -116,7 +115,7 @@ task packageDeb(type: Exec) {
 task packageRpm(type: Exec) {
     workingDir './'
     commandLine(jpackageCommand +
-            [javaOptions,
+            [javaOptions + ' --add-exports=java.desktop/sun.awt.X11=ALL-UNNAMED',
              '--license-file', './LICENSE.txt',
              '--linux-rpm-license-type', 'ASL 2.0',
              '--type', 'rpm',
